<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EERescue">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/eersc_t1"
                android:textSize="18sp"
                android:textColor="#FF9900"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/eersc_p1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/n" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/eersc_agr_t1"
                android:textSize="18sp"
                android:textColor="#FF9900"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/eersc_agr1" />

            <LinearLayout
                android:orientation="horizontal"
                android:gravity="right"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/rsc_cb_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eersc_chk1"
                    android:buttonTint="@color/colorPrimary"
                    android:layoutDirection="rtl"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/n" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/eersc_agr_t2"
                android:textSize="18sp"
                android:textColor="#FF9900"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/eersc_agr2" />

            <LinearLayout
                android:orientation="horizontal"
                android:gravity="right"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/rsc_cb_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eersc_chk2"
                    android:buttonTint="@color/colorPrimary"
                    android:layoutDirection="rtl"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/n" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/eersc_agr_t3"
                android:textSize="18sp"
                android:textColor="#FF9900"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/eersc_agr3" />

            <LinearLayout
                android:orientation="horizontal"
                android:gravity="right"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/rsc_cb_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eersc_chk3"
                    android:buttonTint="@color/colorPrimary"
                    android:layoutDirection="rtl"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:gravity="right"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/rsc_cb_fn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eersc_fin_ch"
                    android:buttonTint="@color/colorPrimary"
                    android:layoutDirection="rtl"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/n" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/n" />

            <Button
                android:id="@+id/rsc_bt_disarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eersc_disarm"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/n" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>